--- a/index1.html
+++ b/index1.html
@@ -286,7 +286,7 @@
  
  <div class="card">
  
-  <img src="C:\Users\user\Desktop\New folder (7)/img14.png"class="card-img img-fluid">
+  <img src="img14.png"class="card-img img-fluid">
   <div class ="card-body">
   <h3 class="card-title">ঢাকা টু কক্সবাজার বিমান ভাড়া, টিকিট ও ফ্লাইট বুকিং সহ সব তথ্য</br></br>
        কক্সবাজার পৃথিবীর দীর্ঘতম সমুদ্র সৈকত তথা বাংলাদেশের অন্যতম জনপ্রিয় পর্যটন কেন্দ্র। বাংলাদেশের দক্ষিণ পূর্বাঞ্চলের এই...</br>
